--- a/Cavalry/Config/DefaultInput.ini
+++ b/Cavalry/Config/DefaultInput.ini
@@ -77,10 +77,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+AxisMappings=(AxisName="VerticalAxis",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="VerticalAxis",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="HorizontalAxis",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="HorizontalAxis",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="VerticalAxis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
++AxisMappings=(AxisName="HorizontalAxis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
++AxisMappings=(AxisName="VerticalAxis",Scale=1.000000,Key=MixedReality_Left_Thumbstick_Y)
++AxisMappings=(AxisName="HorizontalAxis",Scale=1.000000,Key=MixedReality_Left_Thumbstick_X)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
