--- a/Cavalry/Config/DefaultEditor.ini
+++ b/Cavalry/Config/DefaultEditor.ini
@@ -2,7 +2,7 @@
 bDisplayUnits=True
 bDisplayUnitsOnComponentTransforms=False
 -DistanceUnits=EUnit::Centimeters
-+DistanceUnits=Meters
++DistanceUnits=Centimeters
 -MassUnits=EUnit::Kilograms
 +MassUnits=Kilograms
 -TimeUnits=EUnit::Seconds
