--- a/Cavalry/Config/DefaultInput.ini
+++ b/Cavalry/Config/DefaultInput.ini
@@ -85,6 +85,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="RightHorizontalAxis",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_X)
 +AxisMappings=(AxisName="RightVerticalAxis",Scale=1.000000,Key=MixedReality_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="RightHorizontalAxis",Scale=1.000000,Key=MixedReality_Right_Trackpad_X)
++AxisMappings=(AxisName="LeftVerticalAxis",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_Y)
++AxisMappings=(AxisName="LeftHorizontalAxis",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_X)
++AxisMappings=(AxisName="RightVerticalAxis",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_Y)
++AxisMappings=(AxisName="RightHorizontalAxis",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_X)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
