--- a/Cavalry/Config/DefaultInput.ini
+++ b/Cavalry/Config/DefaultInput.ini
@@ -77,6 +77,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="GrabLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
++ActionMappings=(ActionName="GrabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
++ActionMappings=(ActionName="GrabLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Trigger_Click)
++ActionMappings=(ActionName="GrabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Trigger_Click)
 +AxisMappings=(AxisName="LeftVerticalAxis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
 +AxisMappings=(AxisName="LeftHorizontalAxis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
 +AxisMappings=(AxisName="LeftVerticalAxis",Scale=1.000000,Key=MixedReality_Left_Thumbstick_Y)
@@ -89,6 +93,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LeftHorizontalAxis",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_X)
 +AxisMappings=(AxisName="RightVerticalAxis",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="RightHorizontalAxis",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_X)
++AxisMappings=(AxisName="GrabLeftIndex",Scale=1.000000,Key=ValveIndex_Left_Grip_Axis)
++AxisMappings=(AxisName="GrabRightIndex",Scale=1.000000,Key=ValveIndex_Right_Grip_Axis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
