--- a/Cavalry/Config/DefaultEngine.ini
+++ b/Cavalry/Config/DefaultEngine.ini
@@ -2,4 +2,5 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Playground.Playground
+GlobalDefaultGameMode=/Game/Blueprints/BP_CavalryGameMode.BP_CavalryGameMode_C
 
