First steps into Enemy and AI

--- a/Cavalry/Config/DefaultEngine.ini
+++ b/Cavalry/Config/DefaultEngine.ini
@@ -65,3 +65,6 @@ GlobalDefaultGameMode=/Game/Blueprints/BP_CavalryGameMode.BP_CavalryGameMode_C
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Ammo_Magazine",NewName="Ammo")
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=Apostrophe
+
