idk what these even are :)

--- a/Cavalry/Cavalry.uproject
+++ b/Cavalry/Cavalry.uproject
@@ -42,6 +42,14 @@
 		{
 			"Name": "XRVisualization",
 			"Enabled": true
+		},
+		{
+			"Name": "WindowsMixedReality",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"HoloLens"
+			]
 		}
 	]
 }
