--- a/CavalryProject/Config/DefaultEngine.ini
+++ b/CavalryProject/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/Playground.Playground
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/GM_Cavalry.GM_Cavalry_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
