default level changed

--- a/CavalryProject/Config/DefaultEngine.ini
+++ b/CavalryProject/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Playground.Playground
+EditorStartupMap=/Game/Levels/EditorLoadLevel.EditorLoadLevel
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
