--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ Cavalry/Saved/
 CavalryProject/Intermediate/CachedAssetRegistry.bin
 
 CavalryProject/Intermediate/ReimportCache/
+
+CavalryProject/Intermediate/AssetRegistryCache/284a07a7.bin
