--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ CavalryProject/Intermediate/CachedAssetRegistry.bin
 CavalryProject/Intermediate/ReimportCache/
 
 CavalryProject/Intermediate/AssetRegistryCache/284a07a7.bin
+
+CavalryProject/Intermediate/AssetRegistryCache/bf514883.bin
