More Muzzle Flash

--- a/CavalryProject/CavalryProject.uproject
+++ b/CavalryProject/CavalryProject.uproject
@@ -11,6 +11,10 @@
 				"Win64",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "CascadeToNiagaraConverter",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
