--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,5 @@ CavalryProject/Intermediate/ReimportCache/
 CavalryProject/Intermediate/AssetRegistryCache/284a07a7.bin
 
 CavalryProject/Intermediate/AssetRegistryCache/bf514883.bin
+
+CavalryProject/Intermediate/AssetRegistryCache/572950d9.bin
