--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@ CavalryProject/Intermediate/AssetRegistryCache/284a07a7.bin
 CavalryProject/Intermediate/AssetRegistryCache/bf514883.bin
 
 CavalryProject/Intermediate/AssetRegistryCache/572950d9.bin
+
+CavalryProject/Intermediate/AssetRegistryCache/084c8cca.bin
+
+CavalryProject/Intermediate/AssetRegistryCache/108ad57a.bin
