--- a/CavalryProject/Config/DefaultEngine.ini
+++ b/CavalryProject/Config/DefaultEngine.ini
@@ -1,13 +1,15 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/EditorLoadLevel.EditorLoadLevel
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/Playground.Playground
-ServerDefaultMap=/Engine/Maps/Entry
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/GM_Cavalry.GM_Cavalry_C
 GlobalDefaultServerGameMode=None
 
