Updating the gitignore to include the Kat SDK files

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ DerivedDataCache/*
 Cavalry/Saved/Logs/
 Saved/
 Cavalry/Saved/
+CavalryProject/Plugins/KatDataPlugin4BP
 CavalryProject/Intermediate/CachedAssetRegistry.bin
 
 CavalryProject/Intermediate/ReimportCache/
