--- a/CavalryProject/CavalryProject.uproject
+++ b/CavalryProject/CavalryProject.uproject
@@ -7,6 +7,10 @@
 		{
 			"Name": "CascadeToNiagaraConverter",
 			"Enabled": true
+		},
+		{
+			"Name": "NiagaraExtras",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
