wow look at all these maybe useless build files I can't get rid of :)

--- a/CavalryProject/CavalryProject.uproject
+++ b/CavalryProject/CavalryProject.uproject
@@ -11,6 +11,10 @@
 		{
 			"Name": "NiagaraExtras",
 			"Enabled": true
+		},
+		{
+			"Name": "KatDataPlugin4BP",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
