--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,5 @@ CavalryProject/Intermediate/AssetRegistryCache/572950d9.bin
 CavalryProject/Intermediate/AssetRegistryCache/084c8cca.bin
 
 CavalryProject/Intermediate/AssetRegistryCache/108ad57a.bin
+
+CavalryProject/Binaries/
