--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ CavalryProject/Intermediate/AssetRegistryCache/084c8cca.bin
 CavalryProject/Intermediate/AssetRegistryCache/108ad57a.bin
 
 CavalryProject/Binaries/
+
+CavalryProject/Intermediate/Build/
