LF-19 Lighting, Objectives, and AI can hear gun shots and hits

--- a/CavalryProject/Config/DefaultEngine.ini
+++ b/CavalryProject/Config/DefaultEngine.ini
@@ -47,7 +47,7 @@ r.rhicmdbypass=0
 r.TiledReflectionEnvironmentMinimumCount=10
 
 r.CustomDepth=3
-r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure=True
 
 [/Script/NavigationSystem.NavigationSystemV1]
 
