Render Pipeline switched to Forward Rendering

--- a/CavalryProject/Config/DefaultEngine.ini
+++ b/CavalryProject/Config/DefaultEngine.ini
@@ -49,6 +49,8 @@ r.TiledReflectionEnvironmentMinimumCount=10
 
 r.CustomDepth=3
 r.DefaultFeature.AutoExposure=True
+r.ForwardShading=True
+r.DefaultFeature.AntiAliasing=3
 
 [/Script/NavigationSystem.NavigationSystemV1]
 
@@ -353,4 +355,11 @@ bResolveCollisions=True
 SeparationDirClamp=200.000000
 MaxAgents=100
 PathOffsetRadiusMultiplier=100.000000
+
+[/Script/OculusHMD.OculusHMDRuntimeSettings]
+ColorSpace=Quest
+
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
 
