engine ini now has EOS changes

--- a/CavalryProject/Config/DefaultEngine.ini
+++ b/CavalryProject/Config/DefaultEngine.ini
@@ -363,3 +363,14 @@ ColorSpace=Quest
 IconModelPath=(Path="")
 IconPortalPath=(Path="")
 
+[OnlineSubsystemEOS]
+bEnabled=true
+
+[OnlineSubsystem]
+DefaultPlatformService=EOS
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[/Script/OnlineSubsystemEOS.NetDriverEOS]
+bIsUsingP2PSockets=true
