ignoring FMOD Docs

--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,6 @@ CavalryProject/Intermediate/Build/
 
 CavalryProject/Plugins/FMODStudio/
 
+CavalryProject/Plugins/FMODStudio/Docs/
+
 CavalryProject/Build/
