fixed the spawning issue when you cross over levels from main menu

--- a/CavalryProject/Config/DefaultEngine.ini
+++ b/CavalryProject/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/HUD/Main_Menu/BP_Cavalry_GameInstance.BP_Cavalry_GameInstance_C
-GameDefaultMap=/Game/Levels/LF-19.LF-19
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/GM_Cavalry.GM_Cavalry_C
 GlobalDefaultServerGameMode=None
